--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,14 @@ repositories {
 }
 
 dependencies {
-    testImplementation ()
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
+    testImplementation 'com.codeborne:selenide:6.14.0'
 }
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+}
+
+test {
+    useJUnitPlatform()
 }
