--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
     testImplementation 'com.codeborne:selenide:6.14.0'
+    testImplementation 'org.slf4j:slf4j-simple:2.0.7'
 }
 
 tasks.withType(JavaCompile) {
